<resources>
    <string name="app_name">Dark Mode</string>

    <string name="day_mode">Day mode</string>
    <string name="supported_apps">Apps supporting Dark Mode</string>
    <string name="night_mode">Night mode</string>
    <string name="auto_desc">Automatically dark mode in night.</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="more_apps">More apps</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_app">Rate this App</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">Never</string>
    <string name="rate_us">Rate us</string>
    <string name="terms_amp_conditions" translatable="false"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="rateUs">Please Rate us on Play Store</string>
    <string name="send_feedback">Please send the feedback using E-Mail. We\'ll work on it!</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="feedback">Feedback</string>
    <string name="faaq">Faq</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source">OPEN SOURCE</string>
    <string name="about_us">About us</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="more_info">Tap to know more.</string>
    <string name="sw_info1">You switched to auto mode.</string>
    <string name="sw_info2">You switched to day mode.</string>
    <string name="sw_info3">You switched to night mode.</string>
    <string name="sw_info4">Your phone doesn\'t support Android dark mode</string>
    <string name="app_share" translatable="false">Try Dark Mode for your Phone \n\nDark Mode Support All Social Media Apps \nhttps://play.google.com/store/apps/details?id=com.softinit.darkmode</string>
    <string name="dm_info1">In some cases, phone manufacturers have added a dark mode toggle into the system settings.</string>
    <string name="dm_info2">The Desk Mode can be activated by placing the phone in a desk dock.</string>
    <string name="dm_info3">Dark mode app will not work on all devices since some smartphone manufacturers disabled or blocked this option for their devices!</string>
    <string name="dm_info4">To get the dark mode on older Android phones (up to Android 5.1 - Lollipop), you sometimes have to activate one of the following modes.</string>
    <string name="dm_info5">The FAQ answers the most commonly asked questions.</string>
    <string name="info">Information</string>
    <string name="info1">Is there another option to activate the dark mode?</string>
    <string name="info10">Can significantly reduce power usage for devices with OLED display. That’s why some manufacturers enable Dark Theme as a part of the Battery Saver mode.</string>
    <string name="info11">You don\'t have to wait for Android 10 to get the dark mode!</string>
    <string name="info2">What\'s the problem?</string>
    <string name="info3">Why do I have to activate the Car Mode?</string>
    <string name="info4">Settings -&gt; Display -&gt; Advanced -&gt; Device Theme</string>
    <string name="info5">Settings -&gt; Display -&gt; Dark Theme</string>
    <string name="info6">Settings -&gt; System -&gt; Developer options -&gt; Night mode</string>
    <string name="info7">Why is the Dark Theme important?</string>
    <string name="info8">There are 3 major reasons:</string>
    <string name="info9">Improves visibility for users with low vision and those who are sensitive to bright light.</string>
    <string name="other_apps">Other apps</string>
    <string name="faq_description">Frequently Asked Questions(FAQ) for the Dark Mode App.</string>
    <string name="faq_title">FAQ - Dark Mode</string>
    <string name="updating_miui_error_ques">Updating from MIUI 10 to 11 breaks dark mode. What went wrong?</string>
    <string name="samsung_galaxy_error_ques">My Samsung Galaxy keeps switching back to day mode. What can I do?</string>
    <string name="app_not_working_ques">This app does not work on my phone. What went wrong?</string>
    <string name="app_not_supported_ques">Why is app XYZ not supported?</string>
    <string name="which_apps_supported_ques">Which apps are supported?</string>
    <string name="instagram_error_ques">The dark mode is active but Instagram stays light. Why is that?</string>
    <string name="want_light_mode_back_ques">I uninstalled the app, but my phone stays dark. How can I get the light mode back?</string>
    <string name="dark_mode_turnedoff_ques">The dark mode is turned off after some time. Why is that?</string>
    <string name="auto_mode_ques">What is the Auto mode and how does it work?</string>
    <string name="remove_ads_ques">No one likes ads. Why do you show them, and how can I remove them?</string>
    <string name="app_behaviour_weird_ques">App XYZ looks weird since activating the dark mode. What went wrong?</string>
    <string name="app_orange_tint_ques">My screen has an orange tint since activating the dark mode. Why is that?</string>
    <string name="updated_android_ques">I updated Android, but I cannot change the mode anymore. Why is that?</string>
    <string name="no" translatable="false">1. </string>
    <string name="nu" translatable="false">2. </string>
    <string name="num" translatable="false">3. </string>
    <string name="not_work">Something does not work?</string>
    <string name="faq">FAQ</string>
    <string name="fq">Learn more about this and similar issues in the FAQ.</string>
    <string name="setting">Give it a try and check your system settings:</string>
    <string name="info_for_o">Possible location on Android 8 (Oreo)</string>
    <string name="info_for_p">Possible location on Android 9 (Pie)</string>
    <string name="info_for_t">Possible location on Android 10</string>
    <string name="open_settings">Open Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="guide_title">Active Dark Mode</string>
    <string name="google_pay" translatable="false">Google Pay</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="chrome" translatable="false">Chrome</string>
    <string name="photos" translatable="false">Photos</string>
    <string name="pocket_casts" translatable="false">Pocket Casts</string>
    <string name="fitness" translatable="false">Google Fitness</string>
    <string name="ms_launcher" translatable="false">Microsoft Launcher</string>
    <string name="insgram" translatable="false">Instagram</string>
    <string name="preference_first_start" translatable="false">key_preference_first_start</string>
    <string name="key_preference_dark_mode" translatable="false">key_preference_dark_theme_enabled</string>
    <string name="key_user_session_count" translatable="false">key_user_session_count</string>
    <string name="dark">Night</string>
    <string name="light">Day</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="key_theme_change_count" translatable="false">key_theme_change_count</string>
    <string name="key_exit_info_count">key_exit_info_count</string>
</resources>
